@@ -6,6 +6,20 @@ A demo running multiple tasks
 
 ```
 sdk env
+mvn clean verify
+
+//ExecutorService
+mvn exec:java -Dexec.mainClass="info.jab.demos.SpinnerDemo"
+
+//CompletableFuture
+mvn exec:java -Dexec.mainClass="info.jab.demos.SpinnerDemo2"
+
+//Loom
+mvn clean package
+java --enable-preview -p target/spinner-demo-0.1.0-SNAPSHOT.jar -m info.jab.demos
+
+
+
 mvn clean test
 ```
 
